[package]
name = "defenestrator"
version = "1.0.3"
edition = "2021"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
description = "Simple asynchronous and multithreaded Minecraft name availability checker"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
futures = "0.3.21"
reqwest = { version = "0.11.9", default_features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }

[profile.release]
lto = "fat"
codegen-units = 1
