[package]
name = "defenestrator"
version = "1.0.4"
edition = "2021"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
description = "Simple asynchronous and multithreaded Minecraft name availability checker"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.56"
clap = { version = "3.1.9", features = ["derive"] }
futures = "0.3.21"
reqwest = { version = "0.11.10", default_features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }

[profile.release]
strip = "debuginfo"
